Fix My Profile on mobile

--- a/my-app/src/app/user/user.module.css
+++ b/my-app/src/app/user/user.module.css
@@ -2,6 +2,18 @@
     padding-top: 4rem;
 }
 
+@media (max-width: 473px) { /* Adjust the max-width as needed */
+    .main {
+        padding-top: 9rem; /* Increase padding-top to accommodate the navbar */
+    }
+}
+
+@media (max-width: 296px) { /* Adjust the max-width as needed */
+    .main {
+        padding-top: 14rem; /* Increase padding-top to accommodate the navbar */
+    }
+}
+
 .UserName {
     padding: 2rem;
     font-size: 2rem;
